# InferGrid

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  pyproject.toml 
.github/workflows/: ci.yml
inference-api/: Dockerfile  pyproject.toml
inference-api/app/: main.py  schemas.py
inference-api/app/models/: onnx_loader.py  sklearn_loader.py
inference-api/scripts/: train_model.py
inference-api/tests/: test_main.py  tests_api.py
scripts/: train_model.py
